syntax = "proto3";

package tr.com.atmosware.gyt.grpc;

option java_multiple_files = true;
option java_package = "tr.com.atmosware.gyt.grpc";

import "google/protobuf/empty.proto";

service QuestionService {
  rpc GetQuestionsWithOrganizationIdAndNullOrganization(GetQuestionsRequest) returns(GetQuestionsResponse){}
}
message GetQuestionsRequest{
  string organizationId = 1;
}
message GetQuestionsResponse{
  repeated int64 questionId = 1;
}